--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "reactions",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index",
+  "types": "dist/index",
   "scripts": {
-    "start": "nodemon ./src/server.js --exec babel-node -e js"
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "nodemon": "^1.18.6"
+    "@types/node": "^10.12.5",
+    "@types/express": "^4.16.0",
+    "@types/socket.io": "^2.1.0",
+    "nodemon": "^1.18.6",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6"
   },
   "keywords": [],
   "author": "",
