--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "reactions",
+  "name": "reactions.backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index",
-  "types": "dist/index",
+  "description": "Reactions backend",
+  "main": "src/index.ts",
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
     "lint": "tslint ./src/**/*.ts --fix"
   },
+  "repository": "https://github.com/codex-team/reactions.backend",
+  "author": "codex-team",
+  "license": "MIT",
+  "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.5",
+    "@types/socket.io": "^2.1.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "socket.io": "^2.1.1",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6"
+  },
   "devDependencies": {
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/md5": "^2.1.33",
@@ -19,16 +35,5 @@
     "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "socket.io": "^2.1.1",
-    "tslint": "^5.11.0",
-    "tslint-config-standard": "^8.0.1"
   }
 }
