--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/socket.io": "^2.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongodb": "^3.1.9",
     "socket.io": "^2.1.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
