--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongodb": "^3.1.9",
     "socket.io": "^2.1.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
