--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^10.12.5",
     "@types/express": "^4.16.0",
     "@types/socket.io": "^2.1.0",
+    "@types/cors": "^2.8.4",
     "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
@@ -20,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "socket.io": "^2.1.1"
   }
