--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "author": "codex-team",
   "license": "MIT",
   "dependencies": {
-    "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.16.0",
-    "@types/node": "^10.12.5",
-    "@types/socket.io": "^2.1.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "^3.1.9",
     "socket.io": "^2.1.1",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.6"
+    "ts-node": "^7.0.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.7",
+    "@types/socket.io": "^2.1.0",
     "tslint": "^5.11.0",
-    "tslint-config-standard": "^8.0.1"
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.1.6"
   }
 }
