--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.7",
     "@types/socket.io": "^2.1.0",
     "@types/md5": "^2.1.33",
