--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.16.0",
+    "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.7",
     "@types/socket.io": "^2.1.0",
     "tslint": "^5.11.0",
