--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
   },
   "devDependencies": {
-    "@types/node": "^10.12.5",
-    "@types/express": "^4.16.0",
-    "@types/socket.io": "^2.1.0",
     "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.5",
+    "@types/socket.io": "^2.1.0",
+    "jsdoc": "^3.5.5",
     "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
