--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.4",
     "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.7",
     "@types/socket.io": "^2.1.0",
+    "dotenv": "^6.1.0",
     "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
