--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.7",
     "@types/socket.io": "^2.1.0",
     "@types/md5": "^2.1.33",
+    "dotenv": "^6.1.0",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
     "jsdoc": "^3.5.5",
