--- a/package.json
+++ b/package.json
@@ -5,15 +5,25 @@
   "main": "dist/index",
   "types": "dist/index",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts"
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.5",
     "@types/socket.io": "^2.1.0",
+    "@types/chai": "^4.1.7",
+    "@types/mocha":"^5.2.5",
+    "@types/request":"^2.48.1",
+    "@types/chai-http":"^3.0.5",
+    "chai-http":"^4.2.0",
+    "chai": "^4.2.0",
     "jsdoc": "^3.5.5",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.6",
+    "sinon": "^7.1.1",
+    "request": "^2.88.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
