--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "dist/index",
   "types": "dist/index",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
     "lint": "tslint ./src/**/*.ts --fix"
   },
   "devDependencies": {
     "@types/cors": "^2.8.4",
     "@types/express": "^4.16.0",
+    "@types/md5": "^2.1.33",
     "@types/node": "^10.12.5",
     "@types/socket.io": "^2.1.0",
     "jsdoc": "^3.5.5",
+    "md5": "^2.2.1",
     "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
