Refactor Storage class Connect db with actions

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-URL = 'mongodb://localhost:27017'
-DB_NAME = 'reactions'
-REACTIONS_PREFIX = '_reactions'
+DB_URL=mongodb://localhost:27017
+DB_NAME=reactions
+REACTIONS_PREFIX=reactions
 
