--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "reactions",
+  "name": "reactions.backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index",
-  "types": "dist/index",
+  "description": "Reactions backend",
+  "main": "src/server.ts",
   "scripts": {
     "start": "nodemon --watch 'src/**/*.ts' --exec ts-node src/server.ts",
     "lint": "tslint ./src/**/*.ts --fix"
   },
-  "devDependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "@types/md5": "^2.1.33",
-    "@types/node": "^10.12.5",
-    "@types/socket.io": "^2.1.0",
-    "jsdoc": "^3.5.5",
-    "md5": "^2.2.1",
-    "nodemon": "^1.18.6",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.1.6"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": "https://github.com/codex-team/reactions.backend",
+  "author": "codex-team",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongodb": "^3.1.9",
     "socket.io": "^2.1.1",
+    "ts-node": "^7.0.1"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.0",
+    "@types/md5": "^2.1.33",
+    "@types/mongodb": "^3.1.14",
+    "@types/node": "^10.12.7",
+    "@types/socket.io": "^2.1.0",
+    "dotenv": "^6.2.0",
+    "jsdoc": "^3.5.5",
+    "md5": "^2.2.1",
+    "nodemon": "^1.18.6",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-standard": "^8.0.1"
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.1.6"
   }
 }
