--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongodb": "^3.1.9",
+    "node-cache": "^4.2.0",
     "socket.io": "^2.1.1",
     "ts-node": "^7.0.1"
   },
