--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,5 @@ DB_NAME=reactions
 # Prefix for reactions collection
 REACTIONS_PREFIX=reactions
 
+# Postfix for tokes collection
+TOKENS_POSTFIX=tokens
