--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "codex-team",
   "license": "MIT",
   "dependencies": {
+    "@types/cron": "^1.6.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "cron": "^1.6.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.9",
     "node-cache": "^4.2.0",
