Anti cheat protection (#12)
* Added tokens collections

* Added token validation for vote/unvote methods

* Fixed comments

* Moved token actions to separate actions class

* Cron job for tokens deletion

* Moved @types to devDependencies

* Added ttl indexes

* Removed cron

* Added background option for ttl index

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ DB_NAME=reactions
 # Prefix for reactions collection
 REACTIONS_PREFIX=reactions
 
+# Postfix for tokes collection
+TOKENS_POSTFIX=tokens
+
+# Indicates how long token is valid
+TOKEN_LIFETIME_IN_MINUTES=10
